--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "smashline_totk"
 version = "1.0.0"
 authors = ["C# <@CSharpM7>"]
-edition = "2018"
+edition = "2021"
 
 [package.metadata.skyline]
 titleid = "01006A800016E000"
@@ -11,20 +11,25 @@ titleid = "01006A800016E000"
 crate-type = ["cdylib"]
 
 [dependencies]
-sharpsmashlinesuite = { path = "../../SharpSmashlineSuite", features = ["modules"] }
 skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
 skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
+
 smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
-smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
+smashline = { git = "https://github.com/HDR-Development/smashline" }
 smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
-arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api"}
+smash_rs = { git = "https://github.com/blu-dev/smash-rs", package = "smash" }
+
+#sharpsmashlinesuite = { path = "../../SharpSmashlineSuite", features = ["modules"] }
+sharpsmashlinesuite = { path = "../../SharpSmashlineSuite"}
 lazy_static = "1.4.0"
 
 [profile.dev]
 panic = "abort"
 
 [profile.release]
-opt-level = 'z'
 panic = "abort"
 lto = true
-codegen-units = 1
+
+[features]
+dev = []
+devhook = []
